# ArkLine

./: .gitignore  Agent.md  README.md  gitlog.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: build_configurations.rs  build_project.rs  code_actions.rs  device_log.rs  documents.rs  environment.rs  git_trace.rs  language.rs  settings.rs  terminal.rs  windowing.rs  workspace.rs  workspace_definition.rs  workspace_emit.rs  workspace_index.rs  workspace_index_schedule.rs  workspace_query.rs  workspace_tests.rs
src-tauri/src/indexer_host/: mod.rs  process.rs  runtime.rs  runtime_backoff_tests.rs  runtime_content.rs  runtime_content_tests.rs  runtime_discovery.rs  runtime_lane_tests.rs  runtime_state.rs  runtime_stub.rs  session.rs
src-tauri/src/indexer_sidecar/: mod.rs  protocol.rs  request_validation.rs  request_validation_tests.rs  stdio.rs  stdio_prepare_tests.rs
src-tauri/src/models/: build_project.rs  device_log.rs  device_log_query.rs  diagnostics.rs  language.rs  terminal.rs  workspace.rs  workspace_edit.rs  workspace_index_diagnostics.rs  workspace_index_diagnostics_tests.rs  workspace_index_layer.rs  workspace_index_publication.rs  workspace_semantic_layer.rs
src-tauri/src/platform/: macos.rs  mod.rs  window.rs
src-tauri/src/services/: build_configuration_store.rs  build_project_service.rs  device_fault_log_service.rs  device_log_buffer_service.rs  (+368 more)
src-tauri/tests/: indexer_sidecar_health.rs
(+852 files in other folders)
