[package]
name = "arkline"
version = "0.1.0"
description = "ArkLine desktop host"
authors = ["liuhui"]
license = "UNLICENSED"
repository = ""
default-run = "arkline"
edition = "2021"
rust-version = "1.85"

[lib]
name = "arkline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
notify = "8"
portable-pty = "0.8"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3.2", features = ["NSData"] }

[dev-dependencies]
pretty_assertions = "1"
